@@ -99,7 +99,14 @@ class BitStringDecoderTestCase(unittest.TestCase):
             ints2octs((35, 128, 3, 2, 0, 169, 3, 2, 1, 138, 0, 0)),
             substrateFun=lambda a,b,c: (b,c)
             ) == (ints2octs((3, 2, 0, 169, 3, 2, 1, 138, 0, 0)), -1)
-        
+    def testTypeChecking(self):
+        try:
+            decoder.decode(ints2octs((35, 4, 2, 2, 42, 42)))
+        except PyAsn1Error:
+            pass
+        except:
+            assert 0, 'accepted mis-encoded bit-string constructed out of an integer'
+
 class OctetStringDecoderTestCase(unittest.TestCase):
     def testDefMode(self):
         assert decoder.decode(
@@ -387,7 +394,7 @@ class RealDecoderTestCase(unittest.TestCase):
             decoder.decode(ints2octs((9, 1, 131)))
         except PyAsn1Error:
             pass
-        else:
+        except:
             assert 0, 'accepted too-short real'
 
 class SequenceDecoderTestCase(unittest.TestCase):
